--- a/selfprod Watch App/selfprod Watch App.entitlements
+++ b/selfprod Watch App/selfprod Watch App.entitlements
@@ -3,11 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>aps-environment</key>
-	<string>development</string>
+	<string>$(APS_ENVIRONMENT)</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
 		<string>iCloud.com.adilemre.selfprod</string>
 	</array>
+	<key>com.apple.developer.icloud-container-environment</key>
+	<string>$(ICLOUD_ENVIRONMENT)</string>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
 		<string>CloudKit</string>
