--- a/selfprod-Watch-App-Info.plist
+++ b/selfprod-Watch-App-Info.plist
@@ -2,9 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Partnerinizle bulustugunuzda bildirim almak icin konum izni gereklidir.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Partnerinize sesli mesaj gondermek icin mikrofon izni gereklidir.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string>location</string>
 	</array>
 </dict>
 </plist>
